[ ADD ] basic header component

--- a/resources/src/styles/_variables.scss
+++ b/resources/src/styles/_variables.scss
@@ -2,4 +2,5 @@
 $color-primary: #3f90a6;
 $color-secondary: #f39000;
 $color-bg: #121212;
-$color-elements: #323232;
+$color-element: #1f1f1f;
+$color-element-alt: #1f1f1f;
