[ ADD ] basic app layout

--- a/resources/src/styles/_variables.scss
+++ b/resources/src/styles/_variables.scss
@@ -3,4 +3,4 @@ $color-primary: #3f90a6;
 $color-secondary: #f39000;
 $color-bg: #121212;
 $color-element: #1f1f1f;
-$color-element-alt: #1f1f1f;
+$color-element-alt: #2a2a2a;
