--- a/resources/src/styles/style.scss
+++ b/resources/src/styles/style.scss
@@ -1,7 +1,14 @@
 @use 'resets' as *;
+@use 'scrollbar' as *;
 @use 'variables' as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@300;400;700&display=swap');
+
+html,
+body,
+#app {
+  height: 100%;
+}
 
 body {
   font-family: 'Encode Sans', sans-serif;
