[ ADD ] basic files list rendering

--- a/resources/src/styles/style.scss
+++ b/resources/src/styles/style.scss
@@ -1,6 +1,7 @@
 @use 'resets' as *;
 @use 'scrollbar' as *;
 @use 'form' as *;
+@use 'transitions' as *;
 @use 'variables' as *;
 
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@300;400;700&display=swap');
