[ ADD ] load file from storage as current file

--- a/resources/src/styles/_form.scss
+++ b/resources/src/styles/_form.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 .form-field {
   label {
     display: block;
@@ -7,17 +9,18 @@
 
   input[type='text'] {
     display: block;
-    border: 1px solid rgba(white, 0.4);
+    border: 1px solid rgba($color-secondary, 0.4);
     background: transparent;
     color: white;
     width: 300px;
     padding: 0 0.5em;
     height: 42px;
     transition: border 0.45s ease;
+    outline: none;
 
     &:hover,
     &:focus {
-      border: 1px solid rgba(white, 0.8);
+      border: 1px solid rgba($color-secondary, 0.8);
     }
   }
 }
