--- a/resources/src/styles/_transitions.scss
+++ b/resources/src/styles/_transitions.scss
@@ -1,3 +1,14 @@
+// General transitions
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.35 ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
 // List transitions
 .list-filter-enter-active,
 .list-filter-leave-active {
@@ -17,5 +28,21 @@
   transform: translateX(-20px);
 }
 .list-filter-move {
+  transition: transform 0.5s ease;
+}
+
+// Modal transitions
+.scale-modal-enter-from,
+.scale-modal-leave-to {
+  transform: scale(0.8);
+}
+
+.scale-modal-leave-from,
+.scale-modal-enter-to {
+  transform: scale(1);
+}
+
+.scale-modal-enter-active,
+.scale-modal-leave-active {
   transition: transform 0.5s ease;
 }
