[ ADD ] move some modal styles to partial

--- a/resources/src/styles/style.scss
+++ b/resources/src/styles/style.scss
@@ -1,6 +1,7 @@
 @use 'resets' as *;
 @use 'scrollbar' as *;
 @use 'form' as *;
+@use 'modal' as *;
 @use 'transitions' as *;
 @use 'variables' as *;
 
