[ UPDATE ] handle delet file confirmation

--- a/resources/src/styles/_button.scss
+++ b/resources/src/styles/_button.scss
@@ -1,7 +1,7 @@
 @mixin curtain($color: red, $duration: 0.25s, $from: top) {
   @content;
 
-  &:before {
+  &::before {
     content: '';
     display: block;
     position: absolute;
